# memU-server

./: CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: docker.yml  release.yml
app/: main.py
app/patches/: azure_openai_compat.py
dockerfiles/: Dockerfile
patches/azure-openai/: openai_backend.py  openai_sdk.py
